# CppGameDevExperience

./: .clang-format  .gitignore  .travis.yml  README.md
class-01-basic-game-dev/: CMakeLists.txt
class-01-basic-game-dev/01-1-hello-world/: CMakeLists.txt  hello.cxx
class-01-basic-game-dev/01-2-hello-lib/: CMakeLists.txt
class-01-basic-game-dev/01-2-hello-lib/hello_bin/: CMakeLists.txt
class-01-basic-game-dev/01-2-hello-lib/hello_bin/sources/: main.cxx
class-01-basic-game-dev/01-2-hello-lib/hello_lib/: CMakeLists.txt
class-01-basic-game-dev/01-2-hello-lib/hello_lib/include/: hello_lib.hxx
class-01-basic-game-dev/01-2-hello-lib/hello_lib/sources/: hello_lib.cxx
